linux (3.8.1-1~experimental.1) UNRELEASED; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.8.1

  [ Ben Hutchings ]
  * linux-image: Increase minimum version of initramfs-tools to 0.110~
    which copes with the recently renamed EHCI and NFS modules

  [ Aurelien Jarno ]
  * [mips/octeon] Change HW_RANDOM and HW_RANDOM_OCTEON to modules.

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 01 Mar 2013 14:01:07 +0000

linux (3.8-1~experimental.1) experimental; urgency=low

  * New upstream release: http://kernelnewbies.org/Linux_3.8
    - pidns: Support unsharing the pid namespace. (Closes: #595920)
    - fsnotify: Rework locking and reference counting (Closes: #602966)

  [ Ben Hutchings ]
  * aufs: Update to aufs3.x-rcN-20130204
  * sock_diag: Fix out-of-bounds access to sock_diag_handlers[]

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 25 Feb 2013 05:29:53 +0000

linux (3.7.8-1~experimental.1) experimental; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.4
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.5
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.6
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.7
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.8

  [ Ben Hutchings ]
  * Add powerpcspe architecture, thanks to Roland Stigge (Closes: #693042)
  * aufs: Hide CONFIG_AUFS_PROC_MAP, which requires a patch we don't apply
    (Closes: #693332)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 15 Feb 2013 00:42:03 +0000

linux (3.7.3-1~experimental.1) experimental; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.2
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.7.3

  [ Ben Hutchings ]
  * [ia64] nouveau: Disable another bit of ACPI support (fixes FTBFS)
  * [armhf/omap] Make OMAP_DMA built-in (fixes FTBFS)